# python

./: .gitignore
02_activities/assignments/: assignment_1.ipynb  pyproject.toml
